# gfx-gametech

./: .gitignore  LICENSE  README.md
week1/: CMakeLists.txt
week1/basic_midpoint/: CMakeLists.txt  Makefile  init.c  main  main.c  mla.c  mla.h
week1/triangle_rasterization/: main.c  triangles.h  trirast.c  trirast.h
week2/orthogonal_projection/: Makefile  ortho.c
week2/positioning_the_camera/: lookat.c
week2/transformations_and_gimbal_lock/: gimbal.c  transformations.c
week3/: .gitignore
week3/bezier_curves/: Makefile  bezier.c  curves (almost otherside).txt  curves (copy).txt  curves (final).txt  curves checkpoint stable.txt  curves gettea.txt  curves.txt  rply.c  singlecurve
week3/orthogonal_projection/: Makefile  main.c  ortho.c
week4/: Makefile  intersection.c  main.c  shaders.c
week5/isosurface/: main.c  marching_tetrahedra.c  volume.c  volume.h
week5/texture_mapping/: geometry.c  main.c
week6/2D_assignment_framework/UvA platformer/: .gitignore
week6/2D_assignment_framework/UvA platformer/Assets/: Level_1.unity  PlayerScript.cs
week6/2D_assignment_framework/UvA platformer/Assets/Materials/: New Material.mat  Player_Material.mat
week6/2D_assignment_framework/UvA platformer/ProjectSettings/: ProjectSettings.asset
week6/2D_assignment_framework/UvA platformer/Temp/__Backupscenes/: 0.backup
week6/2D_assignment_framework/backup_framework/Assets/: Level_1.unity
week6/2D_assignment_framework/backup_framework/Assets/Materials/: Platform_Material.mat  Projectile_Material.mat
(+3 files in other folders)
